@@ -11,6 +11,10 @@
 #                                                                                          #
 ############################################################################################
 
+[124] --> Misc fixes (TEST):
+           - Fixed cinderglacier charge removal.
+           - Use spell ids for reaping, death rune mastery, blood of the north.
+           - Fixes crash with chains of ice frost rune refresh.
 [123] --> Fix hammer of the righteous double pct damage mods.
 [122] --> SOTA: Fix battleground demolisher's faction.
 [121] --> Fix Halion immunities and damage.
